# Bertel

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  Bertel_API_v3.postman_environment.json  CLAUDE.md  LICENSE  README.md  apply_translations_only.sql  index.html  pytest.ini  test_i18n.sql
.claude/: WORKFLOW.md  settings.local.json
Base de donnée DLL et API/: API_EXTENSIONS_DEEP_DATA.md  DOCUMENT_REQUEST_SYSTEM.md  Guide d’utilisation – API “Unified Objec.md  ITINERARY_MEDIA_FEATURES.md  LEGAL_RECORDS_INTEGRATION.md  LEGAL_REFACTORING_SUMMARY.md  LEGAL_SYSTEM_INTEGRATION_COMPLETE.md  LEGAL_SYSTEM_SETUP_GUIDE.md  LEGAL_VISIBILITY_SYSTEM.md  MODIFICATIONS_GET_OBJECT_RESOURCE.md  README.md  (+121 more)
migration-tool/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_payload.json
migration-tool/docs/: ai-agents-explanation.md
migration-tool/migration_tool/: ai.py  config.py  main.py  schemas.py  supabase_client.py  telemetry.py  webhook.py
migration-tool/migration_tool/agents/: amenities.py  base.py  contact.py  coordinator.py  environment.py  identity.py  languages.py  location.py  media.py  payments.py  pet_policy.py  providers.py  reference_codes.py  schedule.py  verification.py
migration-tool/migration_tool/static/: dashboard.js  styles.css
migration-tool/migration_tool/templates/: dashboard.html
migration-tool/tests/: test_ai_fallback.py  test_ai_providers_schedule.py  test_ai_routing.py  test_coordinator_identity_flow.py  test_identity_agent.py  test_partition.py  test_payload_normalisation.py  test_providers_schedule.py
(+1630 files in other folders)
