[project]
name = "bertel-migration-tool"
version = "0.1.0"
description = "Migration orchestrator and visualization tool for Bertel"
authors = [{ name = "OTI du Sud" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.1",
    "httpx>=0.27.0",
    "supabase>=2.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
bertel-migration-api = "migration_tool.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

